<resources>
    <string name="app_name">Buszjegy</string>
    <string name="name">Név:</string>
    <string name="password">Jelszó:</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="user_name">Felhasználónév:</string>
    <string name="email_address">E-mail cím:</string>
    <string name="password_again">Jelszó megerősítése:</string>
    <string name="cancel">Mégse</string>
    <string name="loginAsGuest">Bejelentkezés vendégként</string>
    <string name="loginWithGoogle">Bejelentkezés Google fiókkal</string>
</resources>